<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingVertical="@dimen/dimen_10dp"
    android:paddingHorizontal="@dimen/dimen_15dp"
    android:layout_height="match_parent"
    tools:context=".view.activity.UserDetailsActivity">

    <ImageView
        android:id="@+id/imgCall"
        android:layout_width="@dimen/dimen_25dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:src="@drawable/ic_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />
    <ImageView
        android:id="@+id/imgMail"
        android:layout_width="@dimen/dimen_25dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:src="@drawable/ic_email"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintEnd_toStartOf="@+id/imgCall"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFullName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_call"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtlblPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/txtMobile"  />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_dob"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtlblPersonal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtBloodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_blood"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_male"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtBloodGroup" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtUniversity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_university"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtGender" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtUniversity" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtlblCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress"  />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlblCompany" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtlblRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/role"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCompanyName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_5dp"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/txtlblRole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtlblRole"
        app:layout_constraintTop_toTopOf="@+id/txtlblRole" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtlblDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/department"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRole" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtDepartment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_5dp"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/txtlblDepartment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtlblDepartment"
        app:layout_constraintTop_toTopOf="@+id/txtlblDepartment" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtlblAddress"
        android:layout_width="59dp"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlblDepartment" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCompanyAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_5dp"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/txtlblAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toEndOf="@+id/txtlblAddress"
        app:layout_constraintTop_toTopOf="@+id/txtlblAddress" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytNoData"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/no_data_found_n_nswipe_to_refresh"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressDialog"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imgArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:paddingVertical="@dimen/dimen_10dp"
        app:tint="@color/black"
        android:paddingEnd="@dimen/dimen_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>